--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -43,4 +43,10 @@ en:
   login:
     link: "Log in"
     fail: "Login failed"
-    success: "Login successful"  
+    success: "Login successful"
+  event:
+    create:
+      link: "Create new event"
+  user:
+    edit:
+      link: "Edit profile"        
