--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -49,4 +49,6 @@ en:
       link: "Create new event"
   user:
     edit:
-      link: "Edit profile"        
+      link: "Edit profile"
+  all_events: "All events"
+  home: "Home"            
